[472850] Update Rete visualizer to GEF 5.0
WIP, base functionality ported, but may not work

Change-Id: I151eb57e1f8ecf7392a75749bbc21c83669dfc73
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -12,7 +12,7 @@
 	
 		<!-- Query -->
 <!-- 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module> -->
-<!-- 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module> -->
+		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
 <!-- 		<module>../../query/features/org.eclipse.viatra.query.tooling.ui.visualization.feature</module> -->
 		<module>../../query/features/org.eclipse.viatra.query.sdk.extensions.feature</module>
         
