--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/pom.xml
@@ -11,6 +11,9 @@
     </parent>
 	<artifactId>org.eclipse.viatra.query.tooling.ui.retevis</artifactId>
 	<packaging>eclipse-plugin</packaging>
+	<properties>
+	   <target.classifier>luna</target.classifier>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
