[472850] Added a shared project for GEF 5.0 Zest customization
A new project was added called org.eclipse.viatra.integration.zest, that
is intended to contain Zest-related customizations, such as shared node
definitions or feature enhancements over Zest.

Additionally, temporary all Zest-dependent plug-ins are disabled to
ensure successful compilation.

Change-Id: Ie8f1c8ac0488e2357de118ed4ca69cd564612188
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>../../releng/org.eclipse.viatra.target.rcp</module>
-		<module>../../releng/org.eclipse.viatra.update</module>
+		<!-- <module>../../releng/org.eclipse.viatra.update</module>-->
 		<module>../../releng/org.eclipse.viatra.parent.incubation</module>
 
 		<!-- Query -->
