--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -11,9 +11,9 @@
 	<modules>
 	
 		<!-- Query -->
-		<module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
-		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
-		<module>../../query/features/org.eclipse.viatra.query.tooling.ui.visualization.feature</module>
+<!-- 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module> -->
+<!-- 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module> -->
+<!-- 		<module>../../query/features/org.eclipse.viatra.query.tooling.ui.visualization.feature</module> -->
 		<module>../../query/features/org.eclipse.viatra.query.sdk.extensions.feature</module>
         
 		<!-- Transformations -->
@@ -49,18 +49,19 @@
         <module>../../addon/plugins/org.eclipse.viatra.addon.querybyexample.ui</module>
 		<module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime</module>
 		<module>../../addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui</module>
-		<module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest</module>
-		<module>../../addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui.zest</module>
+		<!--  <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest</module> -->
+		<!--  <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui.zest</module> -->
 		<module>../../addon/features/org.eclipse.viatra.addon.querybyexample.feature</module>
-		<module>../../addon/features/org.eclipse.viatra.addon.viewers.runtime.feature</module>
+		<!-- <module>../../addon/features/org.eclipse.viatra.addon.viewers.runtime.feature</module>
 		<module>../../addon/features/org.eclipse.viatra.addon.viewers.runtime.zest.feature</module>
-		<module>../../addon/features/org.eclipse.viatra.addon.viewers.tooling.feature</module>
+		<module>../../addon/features/org.eclipse.viatra.addon.viewers.tooling.feature</module>-->
 
 		<!-- Integration -->
 		<module>../../integration/plugins/org.eclipse.viatra.integration.evm.jdt</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.graphiti</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.modisco</module>
 		<module>../../integration/plugins/org.eclipse.viatra.integration.mwe2</module>
+		<module>../../integration/plugins/org.eclipse.viatra.integration.zest</module>
 		<module>../../integration/tests/org.eclipse.viatra.integration.mwe2.test</module>
 		<module>../../integration/features/org.eclipse.viatra.integration.evm.jdt.feature</module>
 		<module>../../integration/features/org.eclipse.viatra.integration.modisco.feature</module>
