--- a/releng/org.eclipse.viatra.docs/pom.xml
+++ b/releng/org.eclipse.viatra.docs/pom.xml
@@ -11,6 +11,9 @@
     </parent>
 	<artifactId>org.eclipse.viatra.docs</artifactId>
 	<packaging>eclipse-plugin</packaging>
+	<properties>
+	   <target.classifier>luna</target.classifier>
+	</properties>
 	<build>
   <plugins>
    <plugin>
