--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -150,6 +150,34 @@
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
+						<!-- add JavaFX to classpath (jfxrt for Java 7, jfxswt.jar for Java 
+							8) -->
+						<extraClasspathElements>
+							<extraClasspathElement>
+								<groupId>com.oracle</groupId>
+								<artifactId>javafx</artifactId>
+								<version>2.2.0-SNAPSHOT</version>
+								<systemPath>${java.home}/lib/jfxrt.jar</systemPath>
+								<scope>system</scope>
+							</extraClasspathElement>
+							<extraClasspathElement>
+								<groupId>com.oracle</groupId>
+								<artifactId>javafxswt</artifactId>
+								<version>8.0.0-SNAPSHOT</version>
+								<systemPath>${java.home}/lib/jfxswt.jar</systemPath>
+								<scope>system</scope>
+							</extraClasspathElement>
+							<extraClasspathElement>
+								<groupId>com.google.inject.extensions</groupId>
+								<artifactId>guice-multibindings</artifactId>
+								<version>3.0</version>
+							</extraClasspathElement>
+							<extraClasspathElement>
+								<groupId>com.google.inject.extensions</groupId>
+								<artifactId>guice-assistedinject</artifactId>
+								<version>3.0</version>
+							</extraClasspathElement>
+						</extraClasspathElements>
 						<useJDK>BREE</useJDK>
 						<useProjectSettings>true</useProjectSettings>
 						<excludeResources>
