--- a/releng/org.eclipse.viatra.update/pom.xml
+++ b/releng/org.eclipse.viatra.update/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>org.eclipse.viatra.update</artifactId>
 	<packaging>eclipse-repository</packaging>
 	<properties>
-	   <target.classifier>juno</target.classifier>
+	   <target.classifier>luna</target.classifier>
 	</properties>
 	<build>
         <plugins>
