--- a/query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui/pom.xml
@@ -11,4 +11,7 @@
 	</parent>
 	<artifactId>org.eclipse.viatra.query.tooling.localsearch.ui</artifactId>
 	<packaging>eclipse-plugin</packaging>
+	<properties>
+	   <target.classifier>luna</target.classifier>
+	</properties>
 </project>
