--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -11,9 +11,9 @@
 	<modules>
 	
 		<!-- Query -->
-<!-- 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module> -->
+ 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
-<!-- 		<module>../../query/features/org.eclipse.viatra.query.tooling.ui.visualization.feature</module> -->
+ 		<module>../../query/features/org.eclipse.viatra.query.tooling.ui.visualization.feature</module>
 		<module>../../query/features/org.eclipse.viatra.query.sdk.extensions.feature</module>
         
 		<!-- Transformations -->
