[496256] Modularized target platform
  * Created target platform descriptions with target editor from
https://github.com/mbarbero/fr.obeo.releng.targetplatform
  * Separated tooling.debug feature from query.sdk to support definition
of modular target platforms

Change-Id: I1a79928bd8c3b7f423d9180dc62b02f66a09a2ed
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.tooling.debug/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.debug/pom.xml
@@ -11,11 +11,7 @@
 	</parent>
 	<artifactId>org.eclipse.viatra.query.tooling.debug</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<repositories>
-		<repository>
-			<id>eclipse-juno</id>
-			<url>http://download.eclipse.org/releases/juno</url>
-			<layout>p2</layout>
-		</repository>
-	</repositories>
+	<properties>
+	   <target.classifier>juno</target.classifier>
+	</properties>
 </project>
