--- a/releng/org.eclipse.viatra.rcpproduct/pom.xml
+++ b/releng/org.eclipse.viatra.rcpproduct/pom.xml
@@ -33,6 +33,7 @@
                             <groupId>org.eclipse.viatra</groupId>
                             <artifactId>org.eclipse.viatra.target.rcp</artifactId>
                             <version>${viatra.main.version}</version>
+                            <classifier>org.eclipse.viatra.target.rcp</classifier>
                         </artifact>
                         <dependency-resolution>
                         <extraRequirements>
