--- a/releng/org.eclipse.viatra.update/pom.xml
+++ b/releng/org.eclipse.viatra.update/pom.xml
@@ -11,8 +11,11 @@
     </parent>
 	<artifactId>org.eclipse.viatra.update</artifactId>
 	<packaging>eclipse-repository</packaging>
+	<properties>
+	   <target.classifier>juno</target.classifier>
+	</properties>
 	<build>
-		<plugins>
+        <plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-repository-plugin</artifactId>
