[398637] moved query registry view to separate project
Change-Id: Ica89ac841611c973dc7740272c835afe63011f94
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -10,10 +10,11 @@
 	<packaging>pom</packaging>
 	<modules>
 		<!-- Query -->
+        <module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.browser</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
 		<module>../../query/features/org.eclipse.viatra.query.tooling.ui.visualization.feature</module>
-
+        
 		<!-- Transformations -->
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.views</module>
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.debug</module>
