--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/plugin.xml
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/plugin.xml
@@ -36,5 +36,12 @@
             class="org.eclipse.viatra.query.patternlanguage.emf.tests.pltest.PltestPackage"
             genModel="model/typetest.genmodel"/>
    </extension>
+   <extension
+         point="org.eclipse.viatra.query.patternlanguage.purewhitelist">
+      <pure-element
+            fully-qualified-name="org.eclipse.viatra.query.patternlanguage.emf.tests.DummyClass"
+            type="class">
+      </pure-element>
+   </extension>
 
 </plugin>
