[496566] Registered support for Papyrus editor in GMF integration
Change-Id: I452c66b57d943a75818a15a1b7841fe9dfb9e1f2
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/integration/plugins/org.eclipse.viatra.integration.gmf/plugin.xml
+++ b/integration/plugins/org.eclipse.viatra.integration.gmf/plugin.xml
@@ -17,5 +17,12 @@
                type="org.eclipse.viatra.query.tooling.ui.queryexplorer.IModelConnector">
          </adapter>
       </factory>
+      <factory
+            adaptableType="org.eclipse.papyrus.editor.PapyrusMultiDiagramEditor"
+            class="org.eclipse.viatra.integration.gmf.ModelConnectorAdapterFactoryForGMFEditors">
+         <adapter
+               type="org.eclipse.viatra.query.tooling.ui.queryexplorer.IModelConnector">
+         </adapter>
+      </factory>
    </extension>
 </plugin>
