--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -14,6 +14,7 @@
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
 		<module>../../query/features/org.eclipse.viatra.query.tooling.ui.visualization.feature</module>
+		<module>../../query/features/org.eclipse.viatra.query.browser.feature</module>
         
 		<!-- Transformations -->
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.views</module>
