[496264] add backend selection to query result view
Change-Id: I240562ee3b99b8f0bad64361182a45f5cc5be638
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.browser/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.browser/plugin.xml
@@ -162,6 +162,9 @@
       <menuContribution
             allPopups="false"
             locationURI="toolbar:org.eclipse.viatra.query.tooling.ui.queryresult.QueryResultView">
+         <control
+               class="org.eclipse.viatra.query.tooling.ui.queryresult.BackendSelectionControl">
+         </control>
          <command
                commandId="org.eclipse.viatra.query.tooling.ui.result.loadmodel"
                icon="icons/load.gif"
