[496931] Better UI labels for QBE
QBE small enhancements 

Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=496931
Signed-off-by: bergmann <bergmann@mit.bme.hu>

--- a/addon/plugins/org.eclipse.viatra.addon.querybyexample.ui/plugin.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.querybyexample.ui/plugin.xml
@@ -34,7 +34,7 @@
 			id="org.eclipse.viatra.addon.querybyexample.ui.commands.refreshlnkfilecmd">
 		</command>
 		<command
-			name="Adjust exploration depth"
+			name="Restore exploration depth"
 			categoryId="org.eclipse.viatra.addon.querybyexample.ui.commands.qbetoolbarcategory"
 			id="org.eclipse.viatra.addon.querybyexample.ui.commands.qbeautoadjustcmd">
 		</command>
