[494541] Added Run/Debug icons in the VIATRA perspective
Change-Id: If90c089822ea83f2c1f327892f7b4b9557ba856d
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.tooling.ui/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui/plugin.xml
@@ -194,6 +194,9 @@
          <newWizardShortcut
                id="org.eclipse.ui.wizards.new.file">
          </newWizardShortcut>
+         <actionSet
+               id="org.eclipse.debug.ui.launchActionSet">
+         </actionSet>
       </perspectiveExtension>
    </extension>
    <extension
