--- a/query/features/org.eclipse.viatra.query.sdk.extensions.feature/.project
+++ b/query/features/org.eclipse.viatra.query.sdk.extensions.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.viatra.query.browser.feature</name>
+	<name>org.eclipse.viatra.query.sdk.extensions.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
