--- a/query/features/org.eclipse.viatra.query.sdk.extensions.feature/pom.xml
+++ b/query/features/org.eclipse.viatra.query.sdk.extensions.feature/pom.xml
@@ -9,7 +9,7 @@
         <version>0.13.0-SNAPSHOT</version>
         <relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
     </parent>
-	<artifactId>org.eclipse.viatra.query.browser.feature</artifactId>
+	<artifactId>org.eclipse.viatra.query.sdk.extensions.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 	<build>
 		<plugins>
