[497503] do not display load into query results everywhere
Change-Id: I016c562227bafabc52e3dfb5a086b533589c67f6
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.browser/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.browser/plugin.xml
@@ -157,6 +157,26 @@
                id="org.eclipse.viatra.query.tooling.ui.result.loadqueriesmenu"
                label="Load into Query Results"
                style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                  variable="selection">
+               <iterate
+                     ifEmpty="false">
+                  <or>
+                     <instanceof
+                           value="org.eclipse.viatra.query.tooling.ui.queryregistry.QueryRegistryTreeSource">
+                     </instanceof>
+                     <instanceof
+                           value="org.eclipse.viatra.query.tooling.ui.queryregistry.QueryRegistryTreePackage">
+                     </instanceof>
+                     <instanceof
+                           value="org.eclipse.viatra.query.tooling.ui.queryregistry.QueryRegistryTreeEntry">
+                     </instanceof>
+                  </or>
+               </iterate>
+            </with>
+            </visibleWhen>
          </command>
       </menuContribution>
       <menuContribution
