[472850] Update Viewers to GEF 5.0
WIP, basics done, but not feature complete

Change-Id: I1f1123fddf862e73e1ac75a27c0d420dd90abccf
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/addon/features/org.eclipse.viatra.addon.viewers.runtime.zest.feature/pom.xml
+++ b/addon/features/org.eclipse.viatra.addon.viewers.runtime.zest.feature/pom.xml
@@ -11,6 +11,9 @@
     </parent>
 	<artifactId>org.eclipse.viatra.addon.viewers.runtime.zest.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
+	<properties>
+	   <target.classifier>luna</target.classifier>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
