--- a/addon/features/org.eclipse.viatra.addon.viewers.tooling.feature/pom.xml
+++ b/addon/features/org.eclipse.viatra.addon.viewers.tooling.feature/pom.xml
@@ -11,6 +11,9 @@
     </parent>
 	<artifactId>org.eclipse.viatra.addon.viewers.tooling.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
+	<properties>
+	   <target.classifier>luna</target.classifier>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
