--- a/addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest/pom.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest/pom.xml
@@ -11,4 +11,7 @@
     </parent>
 	<artifactId>org.eclipse.viatra.addon.viewers.runtime.zest</artifactId>
 	<packaging>eclipse-plugin</packaging>
+	<properties>
+	   <target.classifier>luna</target.classifier>
+	</properties>
 </project>
